--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "base64-img": "^1.0.4",
+    "cors": "^2.8.5",
+    "image-to-base64": "^2.2.0",
+    "localforage": "^1.10.0",
+    "node-base64-image": "^2.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
