--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "redux-persist": "^6.0.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
